--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 ﻿/* ----------------------------------------------  Layout ----------------------------------------------  */
 
-	html {background-color:#ad4f1f; background-image: linear-gradient(to bottom, #e16729, #ad4f1f); background-repeat: no-repeat;}
+	html {background-color:#e14710; background-image: linear-gradient(to bottom, #f26101, #e14710); background-repeat: no-repeat;}
 	body {
 		font-size:16px; font-family:Arial; width:600px; background-color:#fff; 
 		margin:2em auto; padding:5%;/* line-height:1.6em;*/ 
